kubernetes/apps/default/host/netpol/netpol-host-cluster-access.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-host-cluster-access
spec:
  description: "Allow k3s cluster access"
  nodeSelector:
    matchLabels:
      node-role.kubernetes.io/control-plane: "true"
  ingress:
    - fromCIDR:
        - 192.168.0.0/24
        - 192.168.30.99/32
        - 192.168.30.100/32
        - 192.168.30.101/32
        - 192.168.30.102/32
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
