kubernetes/apps/default/host/netpol/netpol-host-icmp.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-host-icmp
spec:
  description: "Allow ICMP on hosts"
  nodeSelector:
    matchLabels:
      kubernetes.io/os: linux
  ingress:
    - icmps:
      - fields:
        - type: 8
          family: IPv4
