kubernetes/apps/default/host/netpol/netpol-host-internet.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-host-internet
spec:
  description: "Allow Internet access"
  nodeSelector:
    matchLabels:
      ccnp: "true"
  egress:
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
